bugfix(oui-button): vertical-align with inline-flex elements

--- a/packages/oui-button/_mixins.less
+++ b/packages/oui-button/_mixins.less
@@ -25,6 +25,10 @@
     font-weight: @font-weight;
     letter-spacing: @letter-spacing;
     border-radius: @radius;
+    // Required to fix alignment when a button is beside of an
+    // inline-flex element, otherwise inline-flex are pushed to
+    // the bottom.
+    vertical-align: top;
     color: @font-color;
 
     &,
